--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -30,7 +30,7 @@
 \povzetek{
 Diplomska naloga obravnava paralelizacijo grafovskih algoritmov v funkcijskih programskih jezikih, s poudarkom na OCamlu in uporabi knjižnice Domainslib.
 Delo se osredotoča na razvoj in analizo paralelnih različic klasičnih algoritmov, kot so iskanje v širino (BFS), Dijkstrov algoritem in Floyd-Warshallov algoritem.
-Glavni cilj je bil primerjati učinkovitost paralelnih in sekvenčnih implementacij teh algoritmov v kontekstu funkcijskega programiranja.
+Glavni cilj je primerjava učinkovitosti paralelnih in sekvenčnih implementacij teh algoritmov v kontekstu funkcijskega programiranja.
 Analiza je pokazala, da paralelna implementacija lahko izboljša učinkovitost, še posebej pri obsežnih grafih, čeprav je izbor optimalnega števila procesorskih domen ključnega
 pomena za maksimalno zmogljivost.
 }
@@ -39,8 +39,7 @@ pomena za maksimalno zmogljivost.
 \abstract{
 This thesis addresses the parallelization of graph algorithms in functional programming languages, with a focus on OCaml and the use of the Domainslib library.
 The work concentrates on developing and analyzing parallel versions of classical algorithms, such as breadth-first search (BFS), Dijkstra's algorithm, and the Floyd-Warshall algorithm.
-The primary goal was to compare the effectiveness of parallel and sequential implementations of these algorithms in the context of functional programming.
-
+The primary goal is to compare the effectiveness of parallel and sequential implementations of these algorithms in the context of functional programming.
 The analysis showed that parallel implementation can improve efficiency, especially in extensive graphs, although the choice of the optimal number of processor domains is crucial for maximum performance.
 }
 
@@ -200,7 +199,7 @@ OCaml 500 \cite{ocaml_multicore_500}, ki je bila ključna za razumevanje in izva
 V praksi se od paralelnega programa običajno pričakuje višja hitrost izvajanja v primerjavi s sekvenčnim programom,
 kjer se naloge izvajajo zaporedno. Teoretično lahko pričakujemo, da program, ki deluje na $n$ procesorjih,
 doseže do $n$-krat večjo hitrost, vendar je ključno upoštevati dodatne računske obremenitve, ki nastanejo pri vzpostavitvi
-paralelnega izvajanja. Te obremenitve vključujejo sinhronizacijo procesov, upravljanje virov in koordinacijo med procesorskimi enotami.
+paralelnega izvajanja. Te obremenitve vključujejo usklajevanje procesov, upravljanje virov in koordinacijo med procesorskimi enotami.
 Zaradi teh dejavnikov lahko paralelni program v nekaterih primerih, še posebej pri izvajanju na enem samem jedru,
 postane počasnejši od sekvenčnega ekvivalenta. Ta pojav poudarja pomembnost razmisleka o optimalnem razporejanju
 nalog in upravljanju virov, da se maksimizira izkoristek paralelizacije. Slika \ref{fig:cilj-casovne-zahtevnosti-paralelizacije} prikazuje
@@ -272,9 +271,9 @@ nato pa se lotimo algoritmov ter podatkovnih struktur na grafih.
 
 Čeprav ne gre za grafovski algoritem, je vseeno poučno, da najprej predstavimo osnovne koncepte
 paralelizacije na kar se da preprostem primeru. Paralelizirali bomo računanje Fibonaccijevih števil.
-(na način, ki terja eksponentno časovno zahtevnost, kot je razvidno iz slike \ref{fig:fib-graph}).
+Implementirali bomo naivno rekurzivno metodo, ki ima sicer eksponentno časovno zahtevnost, vendar pa je zelo primerna za paralelizacijo.
 Osnovna ideja algoritma je bila povzeta po \cite{parallel_fib_computation} in \cite{multicore_ocaml_article},
-nato pa je bila implementacija še prilagojena za potrebe te diplomske naloge. 
+nato pa je bila implementacija prilagojena še za potrebe te diplomske naloge. 
 
 \subsubsection{Sekvenčno računanje Fibonaccijevih števil}
 
@@ -327,17 +326,24 @@ Preprosto funkcijo za računanje Fibonaccijevega števila, lahko zapišemo na sl
   \label{fig:fib-graph}
 \end{figure}
 
-
 \subsubsection{Paralelno računanje Fibonaccijevih števil}
 
 Raziskava paralelizacije funkcije za izračun Fibonaccijevih števil razkriva, da je možno paralelno računanje izrazov
 $fib(n-1)$ in $fib(n-2)$, kar se nadaljuje do baze rekurzije. Ta pristop, ilustriran na sliki \ref{fig:fib-graph}, pa
 pokaže, da takšna paralelizacija vodi v hitro rast števila paralelnih nalog, saj zgornja meja za število paralelnih
 procesov doseže $O((\frac{1 + \sqrt{5}}{2})^n)$.
-
 V okviru optimizacije je bilo razvito naslednje načelo: paralelizacija naj se uporabi za dele kode z največjimi
-računskimi zahtevami, medtem ko se manj zahtevni segmenti izvajajo sekvenčno. Prag, pri katerem se preide na paralelno
-izračunavanje, je bil postavljen pri Fibonaccijevih številih večjih od $38$, medtem ko se manjša števila računajo sekvenčno.
+računskimi zahtevami, medtem ko se manj zahtevni izračuni izvajajo sekvenčno. Prag, pri katerem se preide na paralelno
+izračunavanje, je postavljen pri Fibonaccijevih številih večjih od $38$, medtem ko se manjša števila računajo sekvenčno.
+
+V tem diplomskem delu nam bo paralelizacijo olajšala knjižnica Domainslib, ki omogoča paralelno obdelavo računskih procesov.
+
+Metoda \texttt{fib\_par}, ki paralelno izračuna $n$-to Fibonaccijevo število, sprejme bazen nalog \texttt{pool},
+ki je odgovoren za inicializacijo množice domen, namenjenih paralelnemu izvajanju.
+\emph{Domene} (ang. domains) so niti, ki nam zagotavljajo sočasnost v OCaml-u.
+Nov bazen nalog ustvarimo z ukazom ~\texttt{T.setup\_pool}, razderemo pa ga z ~\texttt{T.teardown\_pool}.
+V primeru paralelne izvedbe ustvarimo dve asinhroni nalogi za izračun $fib(n-1)$ in $fib(n-2)$.
+Dodatno je izračune treba počakati z ~\texttt{T.await}, preden se njuni rezultati seštejejo.
 
 \begin{lstlisting}
 module T = Domainslib.Task
@@ -353,27 +359,15 @@ let rec fib_par pool n =
     T.await pool a + T.await pool b
 \end{lstlisting}
 
-V okviru te diplomske naloge nam bo paralelizacijo olajšala knjižnica Domainslib, ki omogoča paralelno obdelavo.
-Ključne točke njene uporabe v zgornjem primeru so:
-\begin{itemize}
-  \item Uporaba \texttt{module T = Domainslib.Task} za okrajšavo Domainslib.Task, kar poenostavi kodiranje.
-  \item Funkcija \texttt{fib\_par} sprejme bazen nalog \texttt{pool}, ki je odgovoren za inicializacijo množice domen,
-        namenjenih paralelnemu izvajanju. \emph{Domene} (ang. domains) so niti, ki nam zagotavljajo sočasnost v OCaml-u.
-        Nov bazen nalog ustvarimo z ukazom ~\texttt{T.setup\_pool}, razderemo pa ga z ~\texttt{T.teardown\_pool}.
-  \item V primeru paralelne izvedbe ustvarimo dve asinhroni nalogi za izračun $fib(n-1)$ in $fib(n-2)$.
-        Dodatno je izračune treba počakati z ~\texttt{T.await}, preden se njuni rezultati seštejejo.
-\end{itemize}
-
-\subsubsection{Analiza časa računanja Fibonaccijevih števil}
+\subsubsection{Analiza časa izračuna Fibonaccijevih števil}
 
 Pred analizo časa izračuna Fibonaccijevih števil je pomembno omeniti, da so bili vsi izračuni opravljeni na
-osemjedrnem računalniku. Ker ena domena lahko teče zgolj na enem procesorskem jedru, je maksimalno število
-domen, ki jih je smiselno uporabiti, enako številu procesorskih jeder.
+osemjedrnem računalniku.
 
 Najprej je bila analizirana dinamika časa izračuna Fibonaccijevih števil v odvisnosti od števila domen. 
-Rezultati, prikazani na sliki \ref{fig:fib_par_v_odvisnosti_od_domen}, kažejo, da večanje števila domen zmanjša čas
-izračuna. Ugotovili smo, da je optimalno število domen enako 8.
-
+Rezultati, prikazani na sliki \ref{fig:fib_par_v_odvisnosti_od_domen}, kažejo, se sprva čas izračuna zmanjšuje
+s povečanjem števila domen, nato pa se zaustavi pri 9 domenah. Nadaljnje povečanje števila domen ne prinese
+dodatnega zmanjšanja časa izračuna. 
 \begin{figure}[h!]
   \centering
   \caption{Čas izračuna 43. Fibonaccijevega števila v odvisnosti od števila domen}
@@ -383,7 +377,7 @@ izračuna. Ugotovili smo, da je optimalno število domen enako 8.
 
 Nadaljnja analiza je bila usmerjena na primerjavo časov izračuna med paralelnim in neparalelnim izvajanjem programa. 
 Empirično je bilo ugotovljeno, da neparalelni izračun začne zaostajati pri Fibonaccijevih številih večjih od 38. 
-V nasprotju s tem se pri paralelnem izvajanju čas izračuna povečuje manj intenzivno, kot je razvidno iz Slike 
+V nasprotju s tem se čas paralelnega izvajanja povečuje manj intenzivno, kot je razvidno iz slike
 \ref{fig:fib_par_v_odvisnosti_od_n}. Ta razlika potrjuje učinkovitost paralelizacije pri obdelavi večjih nalog.
 
 \begin{figure}[h!]
@@ -393,21 +387,12 @@ V nasprotju s tem se pri paralelnem izvajanju čas izračuna povečuje manj inte
   \label{fig:fib_par_v_odvisnosti_od_n}
 \end{figure}
 
-Zanimivo je tudi opaziti, kako se čas izračuna spreminja pri različnih pragih sekvenčnosti. 
-V obravnavanem primeru sta bila uporabljena dva različna praga sekvenčnosti (35 in 38), kar je omogočilo dodatne
-vpoglede v učinkovitost in prilagodljivost vzporednega pristopa.
 
+\section{Paralelizacija grafovskih algoritmov}
 
+V nadaljevanju bomo paralelizirali grafovske algoritme, kot so iskanje v širino, Dijkstrov algoritem in Floyd-Warshallov algoritem.
 
-
-
-
-
-
-
-
-
-\section{Predstavitev grafa v funkcijskih jezikih}
+\subsection{Predstavitev grafa v funkcijskih jezikih}
 
 Če želimo implementirati kakršen koli grafovski algoritem, je prvi korak, da graf sploh predstavimo v našem programu.
 Kot smo utemeljili v razdelku \ref{itemize:prednosti_funkcijskega_programiranja}, se grafa lotimo z nespremenljivimi
@@ -415,7 +400,7 @@ podatkovnimi strukturami.
 
 Definirali smo tri module: \texttt{Node}, \texttt{UnweightedGraph} ter \texttt{WeightedGraph}, ki predstavljajo
 vozlišča, utežene in neutežene grafe. V OCamlu modul predstavlja zbirko združenih podatkovnih tipov, funkcij ter drugih modulov v enoto.
-Vsak modul je opredeljen z lastno signaturo, ki predstavlja vmesnik, dostopen uporabniku, medtem ko so podrobnosti
+Vsak modul je opredeljen z lastno signaturo, ki je vmesnik, dostopen uporabniku, medtem ko so podrobnosti
 implementacije funkcij in tipov skrite znotraj modula. 
 Primer tega je abstraktni podatkovni tip \texttt{t} v modulu \texttt{Node}, ki ostaja neviden uporabniku.
 Modul \texttt{Node} na primer vključuje funkcije, kot so \texttt{create}, \texttt{value} in \texttt{compare},
@@ -434,15 +419,14 @@ za svoje delovanje, vrne pa vrednost abstraktnega tipa v danemu modulu.
 \begin{lstlisting}
 module Node : sig
   type t
-  val compare_ids : t -> t -> int
+  val compare : t -> t -> int
   val create : int -> t
   val value : t -> int
-  val compare : t -> t -> int
   val to_string : t -> string
 end = struct
   type t = { id : int; value : int }
 
-  let compare_ids node1 node2 = 
+  let compare node1 node2 = 
     Stdlib.compare node1.id node2.id
   ...
 end
@@ -500,46 +484,6 @@ Modul \texttt{WeightedGraph} se torej od modula \texttt{UnweightedGraph} razliku
 predstavlja povezave, sedaj preslikava, ki vsakemu vozlišču priredi preslikavo, ki njegovim sosedom priredi težo povezave.
 Tako kot pri neuteženem grafu, tudi tukaj poskrbimo za vse metode, ki bi si jih za graf tipično želeli.
 
-\section{Paralelizacija}
-
-\subsection{Pregled OCamlove knjižnice \textit{Domainslib}} \label{sec:pregled_domainslib}
-
-\href{https://github.com/ocaml-multicore/domainslib}{Domainslib} je sočasna programska knjižnica za OCaml, 
-ki nam omogoča paralelizacijo na nivoju procesorja. Ponuja nam različne abstrakcije in orodja za pisanje vzporednih
-in sočasnih programov. Zgrajena je na t. i. domenah (ang. domains). Gre za lahke niti, vgrajene v OCaml.
-S prihodom OCamlove različice 5.0.0 je \texttt{Domainslib} postal tudi del standardne knjižnice OCaml.
-
-Tukaj povzamemo glavne koncepte Domainsliba, ki bodo uporabljene v tej diplomski nalogi:
-
-\begin{itemize} \label{itemize:domainslib}
-  \item \emph{Domene} (ang. domains) so niti, ki nam zagotavljajo sočasnost v OCaml-u. 
-        Po svoji zasnovi so visokonivojske ter imajo nizke stroške dodatne računske obremenitve, kar
-        omogoča ustvarjanje velikega števila sočasnih nalog. Domene so definirane znotraj t.i. bazena nalog
-        (angl. task pool), znotraj katerega specificiramo število domen, ki jih želimo ustvariti. Nov bazen
-        nalog ustvarimo z ukazom ~\texttt{Domainslib.Task.setup\_pool}.
-  \item \emph{Paralelne naloge} (ang. parallel tasks): Knjižnica nam ponuja preproste funkcije za ustvarjanje in upravljanje
-        z vzporednimi nalogami. Naloge so delovne enote, ki se lahko izvajajo hkrati na različnih domenah.
-        Ustvarijo se s funkcijo ~\texttt{Domainslib.Task.async}, na njihovo dokončanje pa se počaka z uporabo
-        ~\texttt{Domainslib.Task.await}.
-  \item \emph{Zbirke opravil} (ang. task collections): Knjižnica nam ponuja zbirke opravil, ki so podobne paralelnim nalogam, 
-        le da lahko v njih shranimo več nalog hkrati. Zbirke opravil so uporabne, kadar želimo ustvariti več nalog hkrati,
-        vendar pa ne želimo ustvariti toliko domen, kot je nalog.
-  \item \emph{Vzorci vzporednega računanja} (ang. parallel computation patterns), ki so pogosto uporabni pri vzporednem
-        programiranju. Na primer, z ukazom \linebreak \texttt{Domainslib.Parallel.For} vzporedno poženemo zanko \texttt{for}.
-        Vse to nam precej olajša delo, če lahko večji kos računalniške naloge razdelimo na manjše kose, ki jih lahko
-        izvajamo vzporedno že preko vgrajenih funkcij.
-  \item \emph{Sinhronizacijski mehanizmi} (ang. synchronization primitives): Knjižnica nam ponuja sinhronizacijske mehanizme,
-        ki nam omogočajo sinhronizacijo med domenami. Za to se uporablja modul \texttt{Atomic}. Obratno lahko definiramo
-        mehanizme za vzajemno izključitev podatkovnih tokov (ang. mutex), ki nam omogočajo, da se določen kos kode
-        izvaja samo na eni domeni hkrati. Za to se uporablja modul \texttt{Mutex}.
-  \item \emph{Izravnavanje obremenitve} (ang. load balancing): Domainslib nam ponuja orodja za izravnavanje obremenitve, 
-        ki nam omogočajo, da se obremenitev med domenami porazdeli čim bolj enakomerno.
-\end{itemize}
-
-Na splošno knjižnica Domainslib ponastavlja postopek pisanja vzporednih in sočasnih programov v OCamlu. 
-Zagotavlja nam visokonivojski (ang. high-level) vmesnik za upravljanje z nalogami, usklajevanje sinhronizacije in
-izkoriščanje vzporednosti, kar olajša izkoriščanje celotnega potenciala večjedrnih procesorjev ter doseganje boljše
-zmogljivosti.
 
 \subsection{Paralelno iskanje v širino (PBFS)}
 
@@ -547,39 +491,33 @@ Breadth-first search (BFS) je algoritem, ki rešuje širok nabor problemov, vklj
 grafov, iskanjem najkrajših poti v neuteženih grafih, preverjanjem povezanosti med vozlišči ter analizo dvodelnosti grafov.
 Dodatno BFS služi kot osnova za naprednejše grafovske algoritme, kot je na primer Dijkstrov algoritem.
 
-Sekvenčna izvedba BFS algoritma temelji na metodologiji upravljanja vrste vozlišč, ki čakajo na raziskavo.
+Sekvenčna izvedba BFS algoritma temelji na metodologiji upravljanja vrste vozlišč, ki čakajo na preiskovanje.
 Algoritem izbere in raziskuje vozlišče na čelu vrste, nato pa v vrsto postopoma dodaja njegove neobiskane sosede.
 Ta proces se nadaljuje, dokler ni več vozlišč za raziskovanje, kar signalizira zaključek algoritma.
-Paralelna različica BFS algoritma predstavlja večji izziv, saj zahteva naprednejšo koordinacijo in upravljanje več
-niti izvedbe. Navdih za implementacijo paralelnega BFS smo črpali iz \cite{spaa2010}.
+
+V kontekstu funkcijskih programskih jezikov, kjer je rekurzija temeljni gradnik, smo k implementaciji BFS algoritma
+pristopil rekurzivno.
+Algoritem izvaja iskanje po nivojih, pri čemer sistematično dodaja vsa dosegljiva vozlišča iz trenutnega nivoja v naslednji nivo.
+Splošno, za vsako vozlišče $u$ trenutnega nivoja $L$ se v naslednji nivo $L'$ vključijo vsi njegovi sosedi, ki še niso
+bili obiskani. Paralelna implementacija bo naslednji nivo pridobila vzporedno, sekvenčna pa zaporedoma.
+Navdih za implementacijo paralelnega BFS smo črpali iz \cite{spaa2010}.
 
 \subsubsection{Sekvenčni BFS}
 
-V kontekstu funkcijskih programskih jezikov, kjer je rekurzija temeljni gradnik, smo k implementaciji BFS algoritma
-pristopil rekurzivno. 
-
-Algoritem izvaja iskanje po nivojih, pri čemer sistematično dodaja vsa dosegljiva vozlišča iz trenutnega nivoja v naslednji nivo.
-Splošno, za vsako vozlišče $u$ trenutnega nivoja $L$ se v naslednji nivo $L'$ vključijo vsi njegovi sosedi, ki še niso
-bili obiskani. 
-
-Ključna metoda v tej implementaciji je \textit{loop}, ki sproži postopek iskanja od začetnega vozlišča, uporabljajoč funkcijo
-\textit{mapper} za določanje naslednjega nivoja. Ta funkcija transformira seznam vozlišč trenutnega nivoja v množico
-vozlišč naslednjega nivoja, pri čemer se uporablja funkcija \textit{mapper\_seq} za pridobivanje sosednjih vozlišč.
-V paralelni verziji algoritma pa bomo uporabili paralelni verzijo funkcije \textit{map} za pridobivanje sosednjih vozlišč.
-Metoda \textit{loop} kliče pomožno funkcijo \textit{loop\_inner}. Ta funkcija obravnava trenutni seznam
-nivojev (\textit{stages}), pri čemer za vsak nivo identificira vse dosegljive in še neobiskane sosede.
+Ključna metoda v tej implementaciji je \texttt{loop}, ki sproži postopek iskanja od začetnega vozlišča, uporabljajoč funkcijo
+\texttt{mapper} za določanje naslednjega nivoja. Ta funkcija transformira seznam vozlišč trenutnega nivoja v množico
+vozlišč naslednjega nivoja, pri čemer se uporablja funkcija \texttt{mapper\_seq} za pridobivanje sosednjih vozlišč.
+Metoda \texttt{loop} kliče pomožno funkcijo \texttt{loop\_inner}. Ta funkcija obravnava trenutni seznam
+nivojev (\texttt{stages}), pri čemer za vsak nivo identificira vse dosegljive in še neobiskane sosede.
 Ti sosedi so nato združeni v naslednji nivo, ki se doda v seznam nivojev. Proces se nadaljuje, dokler ne ostane brez
 vozlišč za raziskovanje, kar označuje zaključek BFS.
 
-Metoda \textit{sequential} predstavlja vstopno točko algoritma, ki z uporabo funkcije \textit{mapper\_seq} izvede
+Metoda \texttt{sequential} predstavlja vstopno točko algoritma, ki z uporabo funkcije \texttt{mapper\_seq} izvede
 sekvenčno verzijo BFS. Ta funkcija deluje tako, da na seznamu trenutnega nivoja za vsako vozlišče poišče sosede znotraj grafa.
-
-Taka implementacija omogoča učinkovito in jasno razumevanje delovanja BFS v funkcijskem programiranju. Prav tako je zaradi
-svoje modularne zasnove enostavno razširljiva na paralelno verzijo algoritma.
 
 \begin{lstlisting}[label=lst:bfs_sequential]
 module BfsAlgorithms : Bfs = struct
-  let loop (start_node : Node.t) 
+  let loop (start_node : Node.t)
       (mapper : Node.t list -> NodeSet.t list)
       (graph : UnweightedGraph.t) : NodeSet.t list =
     let rec loop_inner (visited : NodeSet.t) 
@@ -620,13 +558,16 @@ module BfsAlgorithms : Bfs = struct
 end
 \end{lstlisting}
 
+Taka implementacija omogoča učinkovito in jasno razumevanje delovanja BFS v funkcijskem programiranju. Prav tako je zaradi
+svoje modularne zasnove enostavno razširljiva na paralelno verzijo algoritma.
+
 \subsubsection{Paralelni BFS}
 
 Glavna razlika med sekvenčno in paralelno verzijo algoritma je v tem, da paralelna verzija uporablja paralelno verzijo
-funkcije \textit{map} za pridobivanje sosednjih vozlišč. Paralelna verzija funkcije \textit{map} je implementirana
-v modulu \texttt{BfsAlgorithms} kot funkcija \texttt{parallel\_map}. Ta funkcija sprejme funkcijo \textit{f}, ki jo
-želimo vzporedno izvajati na seznamu elementov, ter seznam elementov, na katerih želimo izvajati funkcijo \textit{f}.
-Nato funkcija \texttt{parallel\_map} vzporedno izvede funkcijo \textit{f} na vsakem elementu seznama, ter vrne seznam
+funkcije \texttt{map} za pridobivanje sosednjih vozlišč. Paralelna verzija funkcije \texttt{map} je implementirana
+v modulu \texttt{BfsAlgorithms} kot funkcija \texttt{parallel\_map}. Ta funkcija sprejme funkcijo \texttt{f}, ki jo
+želimo vzporedno izvajati na seznamu elementov, ter seznam elementov, na katerih želimo izvajati funkcijo \texttt{f}.
+Nato funkcija \texttt{parallel\_map} vzporedno izvede funkcijo \texttt{f} na vsakem elementu seznama, ter vrne seznam
 rezultatov. Implementacija funkcije \texttt{parallel\_map} je prikazana v \ref{lst:bfs_parallel}.
 
 \begin{lstlisting}[label=lst:bfs_parallel]
@@ -664,44 +605,21 @@ end
 
 \end{lstlisting}
 
-Paralelna izvedba BFS algoritma ključno vključuje uporabo metode \textit{T.run} iz knjižnice Domainslib. Ta metoda je
-nujna za obvladovanje notranjih algebraičnih učinkov, ki nastanejo zaradi sinhronizacije nalog med različnimi procesorskimi nitmi.
-Ko v paralelni izvedbi uporabimo funkcijo \textit{parallel\_for}, \textit{T.run} zagotavlja, da so vse vzporedno
+Paralelna izvedba BFS algoritma ključno vključuje uporabo metode \texttt{T.run} iz knjižnice Domainslib. Ta metoda je
+nujna za obvladovanje notranjih algebrajskih učinkov, ki nastanejo zaradi usklajevanja nalog med različnimi procesorskimi nitmi.
+Ko v paralelni izvedbi uporabimo funkcijo \texttt{parallel\_for}, \texttt{T.run} zagotavlja, da so vse vzporedno
 izvajane naloge pravilno usklajene. Tako poskrbimo za varno izvajanje paralelnih nalog.
-Notranji algebraični učinki pri paralelnem izvajanju se nanašajo na procese, ki so potrebni za usklajevanje dostopa do
-skupnih podatkovnih struktur in za koordinacijo nadaljevanja obdelave po zaključku posameznih vzporednih nalog.
 
-Za praktičen primer uporabe paralelnega BFS in merjenje časa izvajanja lahko uporabimo naslednji pristop, kot je prikazano v spodnjem izseku kode:
+\subsubsection{Analiza časa izračuna algoritma BFS}
 
-\begin{lstlisting}[label=lst:bfs_calculation_time]
-let bfs_par_calculation_time 
-    (graph : UnweightedGraph.t) 
-    (start_node : Node.t)
-    (num_domains : int) : float =
-  let task_pool = T.setup_pool ~num_domains () in
-  let start_time = Unix.gettimeofday () in
-  let _ = T.run task_pool (
-    fun () -> Bfs.parallel graph start_node task_pool) in
-  let calculation_time =
-    Unix.gettimeofday () -. start_time in
-  T.teardown_pool task_pool;
-  calculation_time
-\end{lstlisting}
-
-Ta funkcija ustvari bazen nalog (\textit{task\_pool}) glede na določeno število domen in nato uporabi \textit{T.run} za
-izvajanje paralelnega BFS algoritma. Po izvedbi se izmeri časovna razlika, kar nam da čas izračuna algoritma.
-Na koncu se bazen nalog razstavi, s čimer se osvobodijo viri, ki so bili uporabljeni za izvajanje algoritma.
-
-\subsubsection{Analiza časa računanja BFS algoritmov}
-
-Analiza časovne učinkovitosti paralelnega algoritma za iskanje v širino (BFS) v primerjavi s sekvenčnim pristopom je
+Analiza časovne učinkovitosti paralelnega algoritma za iskanje v širino v primerjavi s sekvenčnim pristopom je
 razkrila, da med obema pristopoma ni bistvenih razlik v hitrosti izračuna.
 Ta ugotovitev je bila dosežena z izvedbo testov na različno velikih grafih.
 
-Testiranje paralelnega BFS algoritma je bilo izvedeno na grafu z 6000 vozlišči in 1000000 povezavami, pri čemer je
-bilo število uporabljenih domen sistematično spreminjano. Izbrana velikost grafa je zagotavljala ravnotežje med
-natančnostjo meritev in izogibanjem prekomerni računski obremenitvi. Rezultati testov, prikazani v \ref{fig:bfs_calculation_time_by_num_domains},
-ne kažejo jasne korelacije med časom izračuna in številom uporabljenih domen.
+Testiranje paralelnega BFS algoritma na grafih z različnimi velikostmi, vključno z grafom z 6000 vozlišči in 1000000 povezavami,
+je pokazalo, da spremembe v številu uporabljenih domen niso imele statistično značilnega vpliva na čas izračuna.
+To nakazuje, da paralelizacija algoritma v tem primeru ni prinesla opaznih izboljšav v učinkovitosti, kar velja za vse konfiguracije in oblike grafov.
+Rezultati testov za graf z 6000 vozlišči in 1000000 povezavami so prikazani na sliki \ref{fig:bfs_calculation_time_by_num_domains}.
 
 \begin{figure}[h!]
   \centering
@@ -711,10 +629,11 @@ ne kažejo jasne korelacije med časom izračuna in številom uporabljenih domen
 \end{figure}
 
 Poleg tega je bila izvedena primerjava časov izračuna sekvenčne in paralelne izvedbe algoritma na grafih z različnimi velikostmi.
-Rezultati so prikazani na \ref{fig:bfs_calculation_time_by_graph_size} in kažejo, da čas izračuna tako za sekvenčni kot za paralelni
+Rezultati so prikazani na sliki \ref{fig:bfs_calculation_time_by_graph_size} in kažejo, da čas izračuna tako za sekvenčni kot za paralelni
 pristop linearno narašča s številom vozlišč in povezav v grafu. Vendar pa med časom izračuna sekvenčnega in paralelnega algoritma
 ni bilo opaženih bistvenih razlik. Pri analizi je bilo ohranjeno konstantno razmerje med številom povezav v grafu in vsemi
-možnimi povezavami, imenovano faktor minimizacije. Podobni rezultati so bili opaženi tudi pri drugih faktorjih minimizacije.
+možnimi povezavami, imenovano faktor minimizacije. Tu smo uporabili faktor minimizacije $0,1$. Podobne rezultate smo zabeležili
+tudi pri drugih faktorjih minimizacije.
 
 \begin{figure}[h!]
   \centering
@@ -727,7 +646,7 @@ Ti rezultati kažejo, da paralelna implementacija BFS algoritma v nekaterih scen
 Podobne ugotovitve so zabeležene tudi v drugih študijah. Na primer, v delu \cite{kuroiwa2020analyzing} avtorji ugotavljajo,
 da se pri paralelni implementaciji algoritma lahko pojavijo težave, kot je neenakomerna obremenitev procesorjev, kar
 lahko vpliva na celotno učinkovitost. Podobno v študiji \cite{rudolf2019breadth} avtorji opozarjajo na izzive, povezane
-s sinhronizacijo in obremenitvijo v paralelnih izvedbah BFS algoritma na večjedrni računalniški arhitekturi.
+s usklajevanjem in obremenitvijo v paralelnih izvedbah BFS algoritma na večjedrni računalniški arhitekturi.
 Ta spoznanja odpirajo potrebo po nadaljnjih raziskavah in optimizaciji, s ciljem izboljšati učinkovitost paralelnih implementacij,
 zlasti v primeru posebnih vrst grafov, kjer bi bili paralelni algoritmi lahko hitrejši od sekvenčnih.
 
@@ -771,7 +690,7 @@ end
 Glavni operaciji vrste - vstavljanje in izločanje obe sledita istemu principu. Preko ujemanja vzorcev (ang. pattern matching)
 primerjamo prioriteto trenutnega korena z vrednostjo, ki jo vstavljamo ali izločamo. V odvisnosti od primerjave trenutne
 prioritete z vrednostjo, ki jo vstavljamo ali izločamo, se izvede ustrezna operacija. Za preprečevanje izrojenih dreves
-se uporablja rotacija poddreves, kar pomaga ohranjati uravnoteženost. Implementacija funkcije \textit{insert} je prikazana
+se uporablja rotacija poddreves, kar pomaga ohranjati uravnoteženost. Implementacija funkcije \texttt{insert} je prikazana
 v \ref{lst:pq_insert}.
 
 \begin{lstlisting}[label=lst:pq_insert]
@@ -813,7 +732,7 @@ vstavili element z največjo prioriteto ter ga nam bo uspelo vstaviti pod list z
 rečemo, da je drevo izrojeno). To pa se bo zgodilo redko, saj ob vsakem rekurzivnem klicu premešamo poddrevesa.
 Posledično bo verjetnost, da se bo zgodil najslabši primer, zelo majhna.
 
-\subsubsection{Implementacija Dijkstrovega algoritma}
+\subsubsection{Implementacija paralelnega ter sekvenčnega Dijkstrovega algoritma}
 
 Osnovna zasnova algoritma tako v vzporedni kot v sekvenčni sledi isti logiki. Razlika je le v tem, da se v paralelni
 implementaciji naslednja vozlišča pregleduje vzporedno, medtem ko se v sekvenčni implementaciji pregledujejo zaporedno.
@@ -831,7 +750,7 @@ kako se izvaja pregledovanje sosedov:
     Ta pristop je preprost in učinkovit za manjše ali manj kompleksne grafe.
   \item \textbf{Paralelna implementacija: } Paralelna verzija pri trenutnem vozlišču deli pregledovanje sosedov med
     več procesorskih niti, kjer vsaka nit vzporedno posodablja razdalje sosednjih vozlišč. Za učinkovito vzporedno
-    izvajanje tudi tu uporabljam funkcijo \textit{T.parallel\_for} iz knjižnice Domainslib.
+    izvajanje tudi tu uporabljam funkcijo \texttt{T.parallel\_for} iz knjižnice Domainslib.
 \end{itemize}
 
 zaradi bolj natančnih rezultatov testiranja, je bila implementirana verzija Dijkstre, ki se od začetnega vozlišča
@@ -898,7 +817,7 @@ end
 V Dijkstrovem algoritmu bistveno prispeva k učinkovitosti uporaba nespremenljive vrste s prednostjo, ki omogoča
 hitrejše izbiranje naslednjega vozlišča za raziskovanje. To je še posebej pomembno v obsežnih grafih z velikim številom
 vozlišč, kjer lahko takšna optimizacija znatno zmanjša skupni čas izračuna. Ključna prednost nespremenljive vrste s
-prednostjo v paralelnem kontekstu je v tem, da odpravlja potrebo po sinhronizaciji med večimi procesorskimi nitmi,
+prednostjo v paralelnem kontekstu je v tem, da odpravlja potrebo po usklajevanju med večimi procesorskimi nitmi,
 s čimer se izognemo težavam, kot je ``dirka podatkov''. To ne samo izboljša varnost in zanesljivost paralelnega izvajanja
 algoritma, temveč tudi ohranja visoko učinkovitost paralelne obdelave, kar je ključno za optimizacijo časa izračuna v
 kompleksnejših grafovskih strukturah.
@@ -907,7 +826,7 @@ kompleksnejših grafovskih strukturah.
 
 Tokrat je bil za analizo izbran minimizacijski faktor 0.3, kar pomeni, da je število povezav v grafu 30\% od števila vseh
 možnih povezav. V analizi smo najprej primerjali čas izračuna Dijkstrovega algoritma v odvisnosti od števila domen,
-nato pa še primerjal čas izračuna sekvenčne in paralelne izvedbe algoritma. Rezultati pri drugih minimizacijskih
+nato pa še primerjali čas izračuna sekvenčne in paralelne izvedbe algoritma. Rezultati pri drugih minimizacijskih
 faktorjih so bili podobni.
 
 Analiza je razkrila, da optimalno število domen za izvajanje paralelnega algoritma ni nujno najvišje možno - najkrajši
